--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <div id="wrapper">
         <canvas id="renderer"></canvas>
     </div>
+    <script src="js/vector.js"></script>
+    <script src="js/squid.js"></script>
     <script src="js/squids.js"></script>
     <script src="js/main.js"></script>
 </body>
