--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="@jobtalle"/>
@@ -15,6 +15,7 @@
         <canvas id="renderer"></canvas>
     </div>
     <script src="js/vector.js"></script>
+    <script src="js/segment.js"></script>
     <script src="js/squid.js"></script>
     <script src="js/squids.js"></script>
     <script src="js/main.js"></script>
