Implemented tentacle rigidity model

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     <script src="js/vector.js"></script>
     <script src="js/segment.js"></script>
+    <script src="js/segmentHead.js"></script>
     <script src="js/squid.js"></script>
     <script src="js/squids.js"></script>
     <script src="js/main.js"></script>
