--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 </head>
 <body>
     <div id="wrapper">
-        <canvas id="renderer"></canvas>
+        <div id="viewport">
+            <canvas id="renderer"></canvas>
+        </div>
+        <div id="inspector"></div>
     </div>
     <script src="js/vector.js"></script>
     <script src="js/segment.js"></script>
     <script src="js/segmentHead.js"></script>
+    <script src="js/tentacle.js"></script>
     <script src="js/squid.js"></script>
     <script src="js/squids.js"></script>
     <script src="js/main.js"></script>
