Created Tentacles object containing all tentacles

--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
         <div id="viewport">
             <canvas id="renderer"></canvas>
         </div>
-        <div id="inspector"></div>
+        <div id="inspector">
+            <h2>Inspector</h2>
+        </div>
     </div>
     <script src="js/vector.js"></script>
     <script src="js/segment.js"></script>
     <script src="js/segmentHead.js"></script>
     <script src="js/tentacle.js"></script>
+    <script src="js/tentacles.js"></script>
     <script src="js/squid.js"></script>
     <script src="js/squids.js"></script>
     <script src="js/main.js"></script>
