--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </div>
     </div>
     <script src="js/vector.js"></script>
-    <script src="js/segment.js"></script>
-    <script src="js/segmentHead.js"></script>
-    <script src="js/tentacle.js"></script>
-    <script src="js/tentacles.js"></script>
-    <script src="js/squid.js"></script>
+    <script src="js/agent/tentacle/segment.js"></script>
+    <script src="js/agent/tentacle/segmentHead.js"></script>
+    <script src="js/agent/tentacle/tentacle.js"></script>
+    <script src="js/agent/tentacles.js"></script>
+    <script src="js/agent/squid.js"></script>
     <script src="js/squids.js"></script>
     <script src="js/main.js"></script>
 </body>
