--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
     <script src="js/agent/tentacle/segment.js"></script>
     <script src="js/agent/tentacle/segmentHead.js"></script>
     <script src="js/agent/tentacle/tentacle.js"></script>
+    <script src="js/agent/body.js"></script>
+    <script src="js/agent/eyes.js"></script>
+    <script src="js/agent/mouth.js"></script>
     <script src="js/agent/tentacles.js"></script>
-    <script src="js/agent/squid.js"></script>
+    <script src="js/agent/agent.js"></script>
     <script src="js/squids.js"></script>
     <script src="js/main.js"></script>
 </body>
