--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <div id="wrapper">
         <div id="viewport">
             <canvas id="renderer"></canvas>
-            <div id="inspector">
-                <h2>Inspector</h2>
-            </div>
+            <div id="inspector"></div>
         </div>
     </div>
     <script src="js/vector.js"></script>
