Environment can advance generation, has mutator

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="js/agent/mouth.js"></script>
     <script src="js/agent/tentacles.js"></script>
     <script src="js/agent/agent.js"></script>
+    <script src="js/mutator.js"></script>
     <script src="js/environment.js"></script>
     <script src="js/squids.js"></script>
     <script src="js/main.js"></script>
