Created controls div, environment has preset agent count

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div id="wrapper">
         <div id="viewport">
             <canvas id="renderer"></canvas>
-            <div id="inspector"></div>
+            <div id="controls" class="gui"></div>
+            <div id="inspector" class="gui"></div>
         </div>
     </div>
     <script src="js/vector.js"></script>
