Created info gui & reset button

--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="@jobtalle"/>
-    <meta name="twitter:description" content="Squids"/>
-    <meta name="twitter:title" content="Squids"/>
+    <meta name="twitter:description" content="Cephalopods"/>
+    <meta name="twitter:title" content="Cephalopods"/>
     <meta name="twitter:image" content="https://jobtalle.com/SketchSquids/preview.png"/>
     <meta property="og:image" content="https://jobtalle.com/SketchSquids/preview.png"/>
-    <title>Squids</title>
+    <title>Cephalopods</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
     <div id="wrapper">
         <div id="viewport">
             <canvas id="renderer"></canvas>
-            <div id="controls" class="gui"></div>
+            <div id="controls" class="gui">
+                <div id="info"></div>
+                <div id="buttons"></div>
+            </div>
             <div id="inspector" class="gui"></div>
         </div>
     </div>
@@ -29,7 +32,12 @@
     <script src="js/agent/agent.js"></script>
     <script src="js/mutator.js"></script>
     <script src="js/environment.js"></script>
-    <script src="js/squids.js"></script>
+    <script src="js/cephalopods.js"></script>
+    <script src="js/gui/line.js"></script>
+    <script src="js/gui/button.js"></script>
+    <script src="js/gui/info.js"></script>
+    <script src="js/gui/buttons.js"></script>
+    <script src="js/gui/gui.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
