Implemented warp speed

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="js/cephalopods.js"></script>
     <script src="js/gui/line.js"></script>
     <script src="js/gui/button.js"></script>
+    <script src="js/gui/toggleButton.js"></script>
     <script src="js/gui/info.js"></script>
     <script src="js/gui/buttons.js"></script>
     <script src="js/gui/gui.js"></script>
