Next generation is created from selected & copied agents

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <script src="js/agent/mouth.js"></script>
     <script src="js/agent/tentacles.js"></script>
     <script src="js/agent/agent.js"></script>
+    <script src="js/rater.js"></script>
+    <script src="js/selector.js"></script>
     <script src="js/mutator.js"></script>
     <script src="js/environment.js"></script>
     <script src="js/cephalopods.js"></script>
