Implemented DNA object

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         </div>
     </div>
     <script src="js/vector.js"></script>
+    <script src="js/agent/dna/dnaMouth.js"></script>
+    <script src="js/agent/dna/dnaEyes.js"></script>
+    <script src="js/agent/dna/dnaTentacle.js"></script>
+    <script src="js/agent/dna/dnaTentacles.js"></script>
+    <script src="js/agent/dna/dnaBody.js"></script>
+    <script src="js/agent/dna/dna.js"></script>
     <script src="js/agent/tentacle/segment.js"></script>
     <script src="js/agent/tentacle/segmentHead.js"></script>
     <script src="js/agent/tentacle/tentacle.js"></script>
