Created brain objects

--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
     <script src="js/agent/dna/dnaEyes.js"></script>
     <script src="js/agent/dna/dnaTentacle.js"></script>
     <script src="js/agent/dna/dnaTentacles.js"></script>
+    <script src="js/agent/dna/dnaBrain.js"></script>
     <script src="js/agent/dna/dnaBody.js"></script>
     <script src="js/agent/dna/dna.js"></script>
+    <script src="js/agent/brain/neuron.js"></script>
+    <script src="js/agent/brain/axon.js"></script>
+    <script src="js/agent/brain/brain.js"></script>
     <script src="js/agent/tentacle/segment.js"></script>
     <script src="js/agent/tentacle/segmentHead.js"></script>
     <script src="js/agent/tentacle/tentacle.js"></script>
