Agent inspector shows agent velocity

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div id="wrapper">
         <div id="viewport">
             <canvas id="renderer"></canvas>
-            <div id="controls" class="gui">
+            <div id="controls" class="gui left">
                 <div id="simulation-info"></div>
                 <div id="buttons"></div>
             </div>
-            <div id="inspector" class="gui">
+            <div id="inspector" class="gui right">
                 <div id="agent-info"></div>
                 <div id="brain"></div>
             </div>
