Neurons can be plotted

--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
     <script src="js/gui/line.js"></script>
     <script src="js/gui/button.js"></script>
     <script src="js/gui/toggleButton.js"></script>
-    <script src="js/gui/simulationInfo.js"></script>
-    <script src="js/gui/agentInfo.js"></script>
-    <script src="js/gui/buttons.js"></script>
+    <script src="js/gui/simulation/simulationInfo.js"></script>
+    <script src="js/gui/simulation/buttons.js"></script>
+    <script src="js/gui/agent/agentInfo.js"></script>
+    <script src="js/gui/agent/brainPlot.js"></script>
+    <script src="js/gui/agent/brainView.js"></script>
     <script src="js/gui/gui.js"></script>
     <script src="js/main.js"></script>
 </body>
