--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <script src="js/rater.js"></script>
     <script src="js/selector.js"></script>
     <script src="js/mutator.js"></script>
+    <script src="js/food.js"></script>
     <script src="js/environment.js"></script>
     <script src="js/cephalopods.js"></script>
     <script src="js/gui/line.js"></script>
