Implemented a simple brain mutator

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
     <script src="js/agent/agent.js"></script>
     <script src="js/rater.js"></script>
     <script src="js/selector.js"></script>
-    <script src="js/mutator.js"></script>
+    <script src="js/mutator/mutator.js"></script>
+    <script src="js/mutator/mutatorBody.js"></script>
+    <script src="js/mutator/mutatorBrain.js"></script>
+    <script src="js/mutator/mutatorNeuron.js"></script>
+    <script src="js/mutator/mutatorAxon.js"></script>
     <script src="js/food.js"></script>
     <script src="js/environment.js"></script>
     <script src="js/cephalopods.js"></script>
