--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <script src="js/agent/body.js"></script>
     <script src="js/agent/eyes.js"></script>
     <script src="js/agent/mouth.js"></script>
-    <script src="js/agent/tentacles.js"></script>
+    <script src="js/agent/tentacle/tentacles.js"></script>
     <script src="js/agent/agent.js"></script>
     <script src="js/rater.js"></script>
     <script src="js/selector.js"></script>
