--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="twitter:site" content="@jobtalle"/>
     <meta name="twitter:description" content="Cephalopods"/>
     <meta name="twitter:title" content="Cephalopods"/>
-    <meta name="twitter:image" content="https://jobtalle.com/SketchSquids/preview.png"/>
-    <meta property="og:image" content="https://jobtalle.com/SketchSquids/preview.png"/>
+    <meta name="twitter:image" content="https://jobtalle.com/Cephalopods/preview.png"/>
+    <meta property="og:image" content="https://jobtalle.com/Cephalopods/preview.png"/>
     <title>Cephalopods</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
