--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
     <script src="js/gui/simulation/simulationInfo.js"></script>
     <script src="js/gui/simulation/buttons.js"></script>
     <script src="js/gui/agent/agentInfo.js"></script>
+    <script src="js/gui/agent/neuronPlot.js"></script>
+    <script src="js/gui/agent/axonPlot.js"></script>
     <script src="js/gui/agent/brainPlot.js"></script>
     <script src="js/gui/agent/brainView.js"></script>
     <script src="js/gui/gui.js"></script>
