--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
         </div>
     </div>
     <script src="js/vector.js"></script>
+    <script src="js/agent/dna/dnaAppendage.js"></script>
     <script src="js/agent/dna/dnaMouth.js"></script>
     <script src="js/agent/dna/dnaEyes.js"></script>
     <script src="js/agent/dna/dnaTentacle.js"></script>
-    <script src="js/agent/dna/dnaTentacles.js"></script>
     <script src="js/agent/dna/dnaAxon.js"></script>
     <script src="js/agent/dna/dnaBrain.js"></script>
     <script src="js/agent/dna/dnaBody.js"></script>
     <script src="js/agent/dna/dna.js"></script>
+    <script src="js/agent/appendage.js"></script>
     <script src="js/agent/brain/neuron.js"></script>
     <script src="js/agent/brain/axon.js"></script>
     <script src="js/agent/brain/brain.js"></script>
@@ -42,7 +43,6 @@
     <script src="js/agent/body.js"></script>
     <script src="js/agent/eyes.js"></script>
     <script src="js/agent/mouth.js"></script>
-    <script src="js/agent/tentacle/tentacles.js"></script>
     <script src="js/agent/agent.js"></script>
     <script src="js/rater.js"></script>
     <script src="js/selector.js"></script>
