Appendages mutate symmetry, double and halve number of output neurons when required

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <script src="js/rater.js"></script>
     <script src="js/selector.js"></script>
     <script src="js/mutator/mutator.js"></script>
+    <script src="js/mutator/mutatorAppendage.js"></script>
     <script src="js/mutator/mutatorTentacle.js"></script>
     <script src="js/mutator/mutatorBody.js"></script>
     <script src="js/mutator/mutatorBrain.js"></script>
