Add axon creation and removing chance selectors

--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
                         <input id="agentsCnt" class="formContent" type="number" name="agentsCnt">
                     </div>
                     <div class="formDiv">
+                        <label for="axonMutChance" class="text formContent">Axon mutation chance</label>
+                        <input id="axonMutChance" class="formContent" type="number" name="axonMutChance">
+                    </div>
+                    <div class="formDiv">
+                        <label for="axonMutAmpl" class="text formContent">Axon mutation amplitude</label>
+                        <input id="axonMutAmpl" class="formContent" type="number" name="axonMutAmpl">
+                    </div>
+                    <div class="formDiv">
+                        <label for="axonCreateChance" class="text formContent">Axon creation chance</label>
+                        <input id="axonCreateChance" class="formContent" type="number" name="axonCreateChance">
+                    </div>
+                    <div class="formDiv">
+                        <label for="axonRemoveChance" class="text formContent">Axon removing chance</label>
+                        <input id="axonRemoveChance" class="formContent" type="number" name="axonRemoveChance">
+                    </div>
+                    <div class="formDiv">
                         <input type="button" onclick="ValidateVariables()" class="formContent" value="Start!">
                     </div>
                 </form>
