Add mass per are and neuron per area parameters

--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
                         <input id="axonRemoveChance" class="formContent" type="number" name="axonRemoveChance">
                     </div>
                     <div class="formDiv">
+                        <label for="bodyMassPerArea" class="text formContent">Axon removing chance</label>
+                        <input id="bodyMassPerArea" class="formContent" type="number" name="bodyMassPerArea">
+                    </div>
+                    <div class="formDiv">
+                        <label for="bodyNeuronPerArea" class="text formContent">Axon removing chance</label>
+                        <input id="bodyNeuronPerArea" class="formContent" type="number" name="bodyNeuronPerArea">
+                    </div>
+                    <div class="formDiv">
                         <input type="button" onclick="ValidateVariables()" class="formContent" value="Start!">
                     </div>
                 </form>
