Add agents to next generation selector

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                         <input id="bodyNeuronPerArea" class="formContent" type="number" name="bodyNeuronPerArea">
                     </div>
                     <div class="formDiv">
+                        <label for="agentsToNextGen" class="text formContent">Save agents to next generation</label>
+                        <input id="agentsToNextGen" class="formContent" type="number" name="agentsToNextGen">
+                    </div>
+                    <div class="formDiv">
                         <input type="button" onclick="ValidateVariables()" class="formContent" value="Start!">
                     </div>
                 </form>
